--- a/demos/default.html
+++ b/demos/default.html
@@ -59,7 +59,7 @@
 			to    : 'bottom-top',
 			props : {
 				'--ty': {
-					from   : '0px',
+					from   : '0',
 					to     : '100px'
 				},
 				'--o': {
