--- a/demos/default.html
+++ b/demos/default.html
@@ -106,8 +106,8 @@
 			outside: (instance, percentage, props) => console.log('fadeBox is not animating'),
 			props: {
 				'--o': {
-					from: '.01',
-					to: '.99'
+					from: .01,
+					to: .99
 				}
 			}
 		})
@@ -117,13 +117,17 @@
 		fadeBox.start()
 		easeBoxes.forEach((easeBox) => easeBox.start())
 
-		// Recalculate each position when the viewport size changes.
+		// Recalculate all positions and update all properties manually when the viewport size changes.
 		// Debounce this function in production to avoid unnecessary calculations.
 		window.onresize = function() {
 
 			rotateBox.calculate()
 			fadeBox.calculate()
 			easeBoxes.forEach((easeBox) => easeBox.calculate())
+
+			rotateBox.update()
+			fadeBox.update()
+			easeBoxes.forEach((easeBox) => easeBox.update())
 
 		}
 
