Nicely formatted props

--- a/demos/callback.html
+++ b/demos/callback.html
@@ -51,7 +51,7 @@
 			elem: elem,
 			from: 'middle-bottom',
 			to: 'middle-top',
-			inside: (instance, percentage, props) => hand.rotate(props[0].value, 10, 14),
+			inside: (instance, percentage, props) => hand.rotate(props.deg, 10, 14),
 			props: {
 				'deg': {
 					from: 0,
