--- a/demos/default.html
+++ b/demos/default.html
@@ -74,12 +74,12 @@
 				elem: elem,
 				from: 'middle-bottom',
 				to: 'bottom-top',
+				direct: true,
 				props: {
 					'--ty': {
 						from: '0',
 						to: '100px',
-						timing: timing,
-						direct: true
+						timing: timing
 					}
 				}
 			}))
