--- a/demos/default.html
+++ b/demos/default.html
@@ -4,13 +4,12 @@
 	<meta charset="utf-8">
 	<title>basicScroll Demo</title>
 
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
-
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<style>
 
 		body {
+			font-family: sans-serif;
 			width: 100%;
 			height: 400vh;
 		}
