--- a/demos/callback.html
+++ b/demos/callback.html
@@ -8,10 +8,14 @@
 
 	<style>
 
-		body {
+		html {
 			width: 100%;
-			height: 200vh;
+			height: 100%;
 			font-family: sans-serif;
+		}
+
+		body {
+			height: 200vh;
 		}
 
 		.container {
