Adjust demo CSS

--- a/demos/callback.html
+++ b/demos/callback.html
@@ -8,7 +8,7 @@
 
 	<style>
 
-		html {
+	html {
 			width: 100%;
 			height: 100%;
 			font-family: sans-serif;
@@ -16,6 +16,8 @@
 
 		body {
 			height: 200vh;
+			margin: 0;
+			background: #f8f8f8;
 		}
 
 		.container {
